cloudexpo/src/objects/Goal__c.object
<CustomObject>
    <fields>
        <fullName>Club__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club</label>
        <referenceTo>Club__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CorpNewSales__c</fullName>
        <label>CorpNewSales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CorpRenewal__c</fullName>
        <label>CorpRenewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CorpSales__c</fullName>
        <label>CorpSales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESP_Goal_Id__c</fullName>
        <description>For EQX_TrainerMonthlyGoals ESP Ids</description>
        <label>ESP_Goal_Id</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GoalDate__c</fullName>
        <label>GoalDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GoalMonth__c</fullName>
        <label>GoalMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoalYear__c</fullName>
        <label>GoalYear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndivNewSales__c</fullName>
        <label>IndivNewSales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTGoal__c</fullName>
        <label>PTGoal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>This is value will be either Club or Individual. SFDC trigger will use this to identify the approp recordTypeID during insert.</description>
        <label>RecordType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResRenewal__c</fullName>
        <label>ResRenewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResSales__c</fullName>
        <label>ResSales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesGoalClubId_JobId__c</fullName>
        <description>This is unique id in CRM used primarily for upsert operation. SFDC will not be using this.</description>
        <externalId>true</externalId>
        <label>SalesGoalClubId_JobId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesGoalIndividualId_JobId__c</fullName>
        <description>This is unique id in CRM used primarily for upsert operation. SFDC will not be using this.</description>
        <externalId>true</externalId>
        <label>SalesGoalIndividualId_JobId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <recordTypes>
        <fullName>Club_Goals</fullName>
        <active>true</active>
        <label>Club Goals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Club_Sales</fullName>
        <active>true</active>
        <label>Club Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Sales</fullName>
        <active>true</active>
        <label>Individual Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trainer_PT_Goals</fullName>
        <active>true</active>
        <label>Trainer PT Goals</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>